--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,10 @@
-@import url('/css/header.css');
-@import url('/css/features.css');
-@import url('/css/work.css');
-@import url('/css/team.css');
-@import url('/css/download.css');
-@import url('/css/footer.css');
-@import url('/css/slider.css');
+@import url('../css/header.css');
+@import url('../css/features.css');
+@import url('../css/work.css');
+@import url('../css/team.css');
+@import url('../css/download.css');
+@import url('../css/footer.css');
+@import url('../css/slider.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
 html {
