--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -13,6 +13,7 @@
             width: 100%;
         }
     }
+    // fgfgfg
     .slider__item-discription {
         width: 51%;
         background-color: #5C3249;
