--- a/src/scss/work.scss
+++ b/src/scss/work.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 2px;
-    @media (max-width: 500px) { 
+    @media (max-width: 600px) { 
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
     }
@@ -28,6 +28,10 @@
                 flex-direction: column;
                 justify-content: center;
                 transition: 0.6s ease;
+                @media (max-width: 768px) {
+                    opacity: 100%;
+                    background-color: rgba(198, 203, 205, 0.3);
+                }
                 h3 {
                     text-transform: uppercase;
                     margin: 0 auto 13px;
@@ -74,71 +78,3 @@
         }
     }
 }
-
-
-
-
-
-
-
-// .work__grid {
-//     display: grid;
-//     grid-template-columns: repeat(4, 1fr);
-//     grid-template-rows: repeat(2, 1fr);
-//     grid-gap: 2px;
-//     .work__grid-item {
-//         overflow: hidden;
-//         width: 100%;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         position: relative;
-//         a {
-//             .work__grid-discription {
-            
-//                 // overflow: hidden;
-//                 background-color: rgba(255, 67, 67, 0.8);
-//                 display: flex;
-//                 flex-direction: column;
-//                 justify-content: center;
-//                 width: 100%;
-//                 height: 100%;
-//                 position: absolute;
-//                 left: 0;
-//                 top: 0;
-//                 // z-index: 2;
-//                 opacity: 0;
-            
-//                     h3 {
-//                     text-transform: uppercase;
-//                     margin: 0 auto 13px;
-//                     font-family: 'Raleway', sans-serif;
-//                     color: #FFFFFF;
-//                     font-size: 18px;
-//                     font-weight: 900;
-//                     line-height: 40px;
-                    
-//                     }
-//                     p {
-//                     text-align: center;
-//                     font-family: 'Raleway', sans-serif;
-//                     color: #FFFFFF;
-//                     font-size: 14px;
-//                     font-weight: 400;
-                    
-//                     }
-//             }
-//             img {
-//                 width: 103%;
-//                 height: 103%;
-//             }
-//         }    
-//     }
-    
-//     .work__grid-item:hover .work__grid-discription {
-//         opacity: 1;
-//     }
-    
-// }
-
-
