--- a/src/css/work.css
+++ b/src/css/work.css
@@ -31,7 +31,7 @@
   -ms-grid-row: 3;
   -ms-grid-column: 7;
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .work__grid {
     -ms-grid-columns: 1fr 2px 1fr;
     grid-template-columns: repeat(2, 1fr);
@@ -102,6 +102,12 @@
           justify-content: center;
   -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
+}
+@media (max-width: 768px) {
+  .work__grid .work__grid-cell a .work__cell-discription {
+    opacity: 100%;
+    background-color: rgba(198, 203, 205, 0.3);
+  }
 }
 .work__grid .work__grid-cell a .work__cell-discription h3 {
   text-transform: uppercase;
